--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -2,24 +2,24 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="350dip"
-    android:layout_height="600dip"
+    android:layout_width="250dip"
+    android:layout_height="250dip"
     android:layout_gravity="center"
     android:orientation="vertical"
     tools:context=".infoActivity">
 
     <ImageView
         android:id="@+id/background"
-        android:layout_width="350dip"
-        android:layout_height="550dip"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:background="@drawable/cheems_playa"/>
 
     <TextView
         android:id="@+id/Lugar"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textColor="#000000"
-        android:textSize="40dp"
+        android:textSize="25dp"
         android:text="Lugar:"
         android:layout_marginTop="15dip"
         android:layout_marginLeft="15dip"/>
@@ -30,17 +30,16 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/Lugar"
         android:textColor="#000000"
-        android:textSize="30dp"
-        android:layout_marginTop="15dip"
+        android:textSize="20dp"
         android:layout_marginLeft="15dip"/>
 
     <TextView
         android:id="@+id/Motivo"
-        android:layout_width="wrap_content"
+        android:layout_width="250dip"
         android:layout_height="wrap_content"
         android:layout_below="@id/LugarText"
         android:textColor="#000000"
-        android:textSize="40dp"
+        android:textSize="25dp"
         android:text="Motivo:"
         android:layout_marginTop="15dip"
         android:layout_marginLeft="15dip"/>
@@ -51,8 +50,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/Motivo"
         android:textColor="#000000"
-        android:textSize="30dp"
-        android:layout_marginTop="15dip"
+        android:textSize="20dp"
         android:layout_marginLeft="15dip"/>
 
     <TextView
@@ -61,7 +59,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/MotivoText"
         android:textColor="#000000"
-        android:textSize="40dp"
+        android:textSize="25dp"
         android:text="Responsable:"
         android:layout_marginTop="15dip"
         android:layout_marginLeft="15dip"/>
@@ -72,14 +70,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/Responsable"
         android:textColor="#000000"
-        android:textSize="30dp"
-        android:layout_marginTop="15dip"
+        android:textSize="20dp"
         android:layout_marginLeft="15dip"/>
 
-    <Button
-        android:id="@+id/closeInfo"
-        android:layout_width="350dp"
-        android:layout_height="50dip"
-        android:text="Cerrar"
-        android:layout_alignParentBottom="true"/>
 </RelativeLayout>
