--- a/app/src/main/res/layout/activity_viaje_form.xml
+++ b/app/src/main/res/layout/activity_viaje_form.xml
@@ -1,55 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/cheems_aeropuerto"
-    tools:context=".ViajeFormActivity"
-    android:padding="10dp"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:padding="10dp">
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:text="Nombre:"
         android:textColor="@color/black"
-        android:textSize="30dp"/>
+        android:textSize="30dp" />
 
     <EditText
         android:id="@+id/txtLugar"
-        android:background="@color/white"
         android:layout_width="match_parent"
         android:layout_height="50dip"
-        android:inputType="text"/>
+        android:background="@color/white"
+        android:inputType="text" />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:text="Tipo:"
         android:textColor="@color/black"
-        android:textSize="30dp"/>
+        android:textSize="30dp" />
 
     <EditText
         android:id="@+id/txtMotivo"
-        android:background="@color/white"
         android:layout_width="match_parent"
         android:layout_height="50dip"
-        android:inputType="text"/>
+        android:background="@color/white"
+        android:inputType="text" />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:text="Descripcion:"
         android:textColor="@color/black"
-        android:textSize="30dp"/>
+        android:textSize="30dp" />
 
     <EditText
         android:id="@+id/txtResponsable"
-        android:background="@color/white"
         android:layout_width="match_parent"
         android:layout_height="50dip"
-        android:inputType="text"/>
+        android:background="@color/white"
+        android:inputType="text" />
 
     <Button
         android:id="@+id/btnContinuar"
@@ -58,4 +55,4 @@
         android:layout_marginTop="100dip"
         android:text="Continuar" />
 
-</LinearLayout><?xml version="1.0" encoding="utf-8"?>
+</LinearLayout>
