--- a/app/src/main/res/layout/activity_viaje_form.xml
+++ b/app/src/main/res/layout/activity_viaje_form.xml
@@ -8,51 +8,62 @@
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:text="Nombre:"
+        android:layout_height="40dp"
+        android:text="Lugar:"
         android:textColor="@color/black"
         android:textSize="30dp" />
 
     <EditText
         android:id="@+id/txtLugar"
         android:layout_width="match_parent"
-        android:layout_height="50dip"
+        android:layout_height="35dip"
         android:background="@color/white"
+        android:textColor="@color/black"
         android:inputType="text" />
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:text="Tipo:"
+        android:layout_height="40dp"
+        android:text="Motivo:"
         android:textColor="@color/black"
         android:textSize="30dp" />
 
     <EditText
         android:id="@+id/txtMotivo"
         android:layout_width="match_parent"
-        android:layout_height="50dip"
+        android:layout_height="35dip"
         android:background="@color/white"
+        android:textColor="@color/black"
         android:inputType="text" />
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:text="Descripcion:"
+        android:layout_height="40dp"
+        android:text="Responsable:"
         android:textColor="@color/black"
         android:textSize="30dp" />
 
     <EditText
         android:id="@+id/txtResponsable"
         android:layout_width="match_parent"
-        android:layout_height="50dip"
+        android:layout_height="35dip"
         android:background="@color/white"
+        android:textColor="@color/black"
         android:inputType="text" />
+
+    <fragment
+        android:id="@+id/mapaForm"
+        android:layout_marginTop="120dp"
+        android:layout_width="match_parent"
+        android:layout_gravity="center"
+        android:layout_height="300dp"
+        android:name="com.google.android.gms.maps.SupportMapFragment"/>
 
     <Button
         android:id="@+id/btnContinuar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="100dip"
+        android:layout_marginTop="20dip"
         android:text="Continuar" />
 
 </LinearLayout>
